compiler/tests-spec/testData/diagnostics/linked/expressions/constant-literals/the-types-for-integer-literals/p-1/neg/1.2.fir.kt
// TESTCASE NUMBER: 1
val value_1 = 0b0_l

// TESTCASE NUMBER: 2
val value_2 = <!ILLEGAL_CONST_EXPRESSION!>0B12_L<!>

// TESTCASE NUMBER: 3
val value_3 = 0X234_l

// TESTCASE NUMBER: 4
val value_4 = 0x3567_L
